--- a/views/tournament.hbs
+++ b/views/tournament.hbs
@@ -32,7 +32,7 @@
             <p class="label edu-stage-title">Cấp bậc giáo dục</>
                 <a class="edu-stage-link" href="">
                     <div class="edu-stage">
-                        <div class="edu-tag active mb-3">
+                        <div class="edu-tag mb-3">
                             <div class="edu-tag__content">
                                 <p class="label edu-tag__title">TIỂU HỌC</p>
                                 {{!-- Từ 6-10 tuổi --}}
@@ -66,11 +66,11 @@
                 </a>
                 <a class="edu-stage-link" href="">
                     <div class="edu-stage">
-                        <div class="edu-tag mb-3">
+                        <div class="edu-tag active mb-3">
                             <!-- <span class="bg-deco"></span> -->
-                            <div class="edu-tag__content">
+                            <div class="edu-tag__content ">
                                 <!-- <img src="" alt="" class="banner-img"> -->
-                                <p class="label edu-tag__title">THPT</p>
+                                <p class="label edu-tag__title">ĐẠI HỌC</p>
                                 {{!-- Trên 18--}}
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                             <!-- <span class="bg-deco"></span> -->
                             <div class="edu-tag__content">
                                 <!-- <img src="" alt="" class="banner-img"> -->
-                                <p class="label edu-tag__title">THPT</p>
+                                <p class="label edu-tag__title">KHÁC</p>
                                 {{!-- Trên 18--}}
                             </div>
                         </div>
@@ -94,7 +94,7 @@
         <div class="col-xl-9">
             <div class="container-fluid">
                 <div class="row">
-                    <p class="label">Giải đấu bậc Tiểu học</p>
+                    <p class="label">Giải đấu bậc Đại học</p>
                     {{#each tournaments}}
                     <div class="col-xl-4">
                         <div class="tournament-tag mb-3 d-flex flex-column flex-align-between">
