--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,7 +7,11 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-7">
                     <div class="mb-4">
-                        <h3>Đăng Nhập</h3>
+                        <h3>Đăng Nhập
+                            <a href="/register">
+                                Đăng ký
+                            </a>
+                        </h3>
                         <p class="mb-4">Website quản lý đội tuyển thể thao lớn nhất Việt Nam.</p>
                     </div>
                     <form action="/auth/login" method="post">
