--- a/views/tournament.hbs
+++ b/views/tournament.hbs
@@ -100,7 +100,7 @@
                         <div class="tournament-tag mb-3 d-flex flex-column flex-align-between">
                             <div class="flex-grow-1 tournament-tag__content">
                                 <p class="label tournament-tag__title">Giải đấu {{this.TenGD}}</p>
-                                <p class="title tournament-tag__startdate">Ngày bắt đầu: 15/05/2021</p>
+                                <p class="title tournament-tag__startdate">Hạn đăng ký: {{this.HanCuoiDangKy}}</p>
                                 <p class="title tournament-tag__startdate" id="date">Ngày hiện tại: 20/05/2021</p>
                                 {{!-- <p class="title tournament-tag__startdate">Ngày kết thúc: 25/05/2021</p> --}}
                                 <p class="title tournament-tag__startdate">Số đội tham gia: {{this.SoDBThamGia}}</p>
