--- a/views/home.hbs
+++ b/views/home.hbs
@@ -78,9 +78,18 @@
                     <img src="" alt="" class="banner-img">
                     <h2 class="banner-title">Hội Thao </br> Hằng Năm 2021</h2>
                     <p class="label">Hơn 50 cơ sở giáo dục trên toàn quốc tham gia.</p>
-                    <a href="/register">
-                    <button type="button" class="btn btn-light banner-btn">Tham gia ngay<i
-                            class="fas fa-arrow-right"></i></button></a>
+                    {{#if user}}
+                        <a href="/register/team">
+                        <button type="button" class="btn btn-light banner-btn">Tham gia ngay<i
+                                class="fas fa-arrow-right"></i></button>
+                        </a>
+                    {{else}}
+                        <a href="/auth/login">
+                            <button type="button" class="btn btn-light banner-btn">Tham gia ngay<i
+                                    class="fas fa-arrow-right"></i></button>
+                            sang 2
+                        </a>
+                    {{/if}}
                 </div>
             </div>
             <!-- /Banner -->
