--- a/views/register-members.hbs
+++ b/views/register-members.hbs
@@ -5,12 +5,15 @@
                 <div class="col-sm-6">
                     <h4>Thành viên trong đội</h4>
                 </div>
-                <div class="col-sm-6">
-                    <a href="#addMemberModal" class="btn btn-add-member" data-toggle="modal"><i
-                            class="fas fa-plus-circle"></i> <span>Thêm thành viên</span></a>
-                    <a href="#deleteAllMembersModal" class="btn btn-danger btn-delete-members" data-toggle="modal"><i
-                            class="fas fa-minus-circle"></i><span>Xóa tất cả</span></a>
-                </div>
+                <input value="{{isDeadlineTournament}}" type="hidden">
+                {{#unless isDeadlineTournament}}
+                    <div class="col-sm-6">
+                        <a href="#addMemberModal" class="btn btn-add-member" data-toggle="modal"><i
+                                class="fas fa-plus-circle"></i> <span>Thêm thành viên</span></a>
+                        <a href="#deleteAllMembersModal" class="btn btn-danger btn-delete-members" data-toggle="modal"><i
+                                class="fas fa-minus-circle"></i><span>Xóa tất cả</span></a>
+                    </div>
+                {{/unless}}
             </div>
         </div>
         <table class="table table-striped table-hover">
@@ -51,9 +54,11 @@
                     <td>{{TongBT}}</td>
 
                     <td>
+                {{#unless ../isDeadlineTournament}}
                         <a href="/register/members/{{MaCT}}/edit" class="edit"><i
                                 class="fas fa-pencil-alt"></i></a>
                         <a href="#deleteMemberModal" class="delete" data-toggle="modal"><i class="fas fa-trash"></i></a>
+                 {{/unless}}
                     </td>
                 </tr>
             {{/each}}
