--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -43,7 +43,7 @@
                     <li>
                         <img src="/img/picme.jpg" alt="" class="user-avatar">
                     </li>
-                    <li class="navbar__user dropdown gx-0 row align-items-center">
+                    <li class="navbar__user dropdown gx-0 row align-items-center ms-2">
                         <p class="user-name">{{user.email}}</p>
                     </li>
                 </div>
