--- a/views/register-members.hbs
+++ b/views/register-members.hbs
@@ -7,13 +7,14 @@
                 </div>
                 <input value="{{isDeadlineTournament}}" type="hidden">
                 {{#unless isDeadlineTournament}}
-                    <div class="col-sm-6">
-                        <a href="#addMemberModal" class="btn btn-add-member" data-toggle="modal"><i
-                                class="fas fa-plus-circle"></i> <span>Thêm thành viên</span></a>
-                        <a href="#deleteAllMembersModal" class="btn btn-danger btn-delete-members" data-toggle="modal"><i
-                                class="fas fa-minus-circle"></i><span>Xóa tất cả</span></a>
-                    </div>
+                <div class="col-sm-6">
+                    <a href="#addMemberModal" class="btn btn-add-member" data-toggle="modal"><i
+                            class="fas fa-plus-circle"></i> <span>Thêm thành viên</span></a>
+                    <a href="#deleteAllMembersModal" class="btn btn-danger btn-delete-members" data-toggle="modal"><i
+                            class="fas fa-minus-circle"></i><span>Xóa tất cả</span></a>
+                </div>
                 {{/unless}}
+                <h5 class="text-white">Đã hết thời hạn đăng ký giải đấu {{tournamentName.TenGD}}, tạm thời không thể thêm thành viên.</h5>
             </div>
         </div>
         <table class="table table-striped table-hover">
@@ -36,7 +37,7 @@
                 </tr>
             </thead>
             <tbody>
-            {{#each members}}
+                {{#each members}}
                 <tr>
                     <td>
                         <span class="custom-checkbox">
@@ -54,14 +55,13 @@
                     <td>{{TongBT}}</td>
 
                     <td>
-                {{#unless ../isDeadlineTournament}}
-                        <a href="/register/members/{{MaCT}}/edit" class="edit"><i
-                                class="fas fa-pencil-alt"></i></a>
+                        {{#unless ../isDeadlineTournament}}
+                        <a href="/register/members/{{MaCT}}/edit" class="edit"><i class="fas fa-pencil-alt"></i></a>
                         <a href="#deleteMemberModal" class="delete" data-toggle="modal"><i class="fas fa-trash"></i></a>
-                 {{/unless}}
+                        {{/unless}}
                     </td>
                 </tr>
-            {{/each}}
+                {{/each}}
             </tbody>
         </table>
     </div>
@@ -73,7 +73,7 @@
             <form action="/register/members/add" method="post">
                 <div class="modal-header">
                     <h4 class="modal-title">Thêm thành viên mới</h4>
-                        <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
+                    <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
                 </div>
                 <div class="modal-body">
                     <input name="teamId" value="{{teamId}}" type="hidden">
@@ -83,11 +83,11 @@
                     </div>
                     <div class="form-group">
                         <label>Số áo</label>
-                        <input name="playerNumber"  type="text" class="form-control" required>
+                        <input name="playerNumber" type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Vị trí</label>
-                        <input name="playerPosition"  type="text" class="form-control" required>
+                        <input name="playerPosition" type="text" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label>Ngày sinh</label>
@@ -157,7 +157,7 @@
 <div id="deleteMemberModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form>
+            <form name="delete-member-form" method="POST">
                 <div class="modal-header">
                     <h4 class="modal-title">Xóa thành viên này?</h4>
                     <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
-                    <input type="submit" class="btn btn-danger" value="Xóa">
+                    <input type="submit" class="btn btn-danger" id="btn-delete-member" value="Xóa">
                 </div>
             </form>
         </div>
