--- a/views/schedule/schedule.hbs
+++ b/views/schedule/schedule.hbs
@@ -209,8 +209,8 @@
 <script src="/js/schedule.js"></script>
 <script>
     $(document).ready(function () {
-        $('#sidebar-tag__home').classList.remove('active');
-        $('#sidebar-tag__team').classList.remove('active');
-        $('#sidebar-tag__schedule').classList.add('active');
+        $('#sidebar-tag__home').removeClass('active');
+        $('#sidebar-tag__team').removeClass('active');
+        $('#sidebar-tag__schedule').addClass('active');
     });
 </script>
