--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -115,8 +115,8 @@
 <script src="js/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
-        $('#sidebar-tag__home').classList.remove('active');
-        $('#sidebar-tag__team').classList.add('active');
-        $('#sidebar-tag__schedule').classList.remove('active');
+        $('#sidebar-tag__home').removeClass('active');
+        $('#sidebar-tag__team').addClass('active');
+        $('#sidebar-tag__schedule').removeClass('active');
     });
 </script>
