fix delete player

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -53,6 +53,7 @@
     <script src="/js/responsive.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/calendar.js"></script>
+    {{{_sections.script}}}
 </body>
 
 </html>
