--- a/views/registerTeam.hbs
+++ b/views/registerTeam.hbs
@@ -29,16 +29,16 @@
                             <div>
                                 <label for="">Chọn màu áo</label>
                                 <select class="form-control" name="color" id="">
-                                    <option value="black">Đen</option>
-                                    <option value="white">Trắng</option>
-                                    <option value="silver">Bạc</option>
-                                    <option value="red">Đỏ</option>
-                                    <option value="orange">Cam</option>
-                                    <option value="yellow">Vàng</option>
-                                    <option value="green">Xanh lá</option>
-                                    <option value="blue">Xanh dương</option>
-                                    <option value="violet">Tím</option>
-                                    <option value="pink">Hồng</option>
+                                    <option value="Đen">Đen</option>
+                                    <option value="Trắng">Trắng</option>
+                                    <option value="Bạc">Bạc</option>
+                                    <option value="Đỏ">Đỏ</option>
+                                    <option value="Cam">Cam</option>
+                                    <option value="Vàng">Vàng</option>
+                                    <option value="Xanh lá">Xanh lá</option>
+                                    <option value="Xanh dương">Xanh dương</option>
+                                    <option value="Tím">Tím</option>
+                                    <option value="Hồng">Hồng</option>
                                 </select>
                             </div>
                             <div class="form-radio">
