--- a/views/team/team-detail.hbs
+++ b/views/team/team-detail.hbs
@@ -48,10 +48,10 @@
             <div class="filter-tag d-flex flex-wrap align-items-center">
                 <p class="label">Thành viên đội</p>
 
-                <div class="search-bar">
-                    <input class="form-control search-box" type="search" placeholder="Tìm kiếm..." aria-label="Search">
+                <form action="" method="POST" class="search-bar">
+                    <input class="form-control search-box" type="search" placeholder="Tìm kiếm..." aria-label="Search" name="term">
                     <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-                </div>
+                </form>
                 <div class="filter-tag d-flex flex-grow-1">
                     <p>Lọc: </p>
                     <div class="dropdown">
