--- a/views/schedule/schedule.hbs
+++ b/views/schedule/schedule.hbs
@@ -4,9 +4,11 @@
         <div class="search-bar flex-grow-1">
             <input class="form-control search-box-schedule" type="search" placeholder="Tìm kiếm..." aria-label="Search">
         </div>
-        {{!-- <a href="schedule/generate" class="btn btn-success btn-schedule-generator" type="submit">Xếp lịch tự động</a> --}}
+        {{!-- <a href="schedule/generate" class="btn btn-success btn-schedule-generator" type="submit">Xếp lịch tự
+            động</a> --}}
     </div>
-    {{!-- <p>*Lưu ý: tuyệt đối không chọn lại "Xếp lịch tự động" khi hệ thống đã xếp lịch xong, để tránh lỗi database.</p>
+    {{!-- <p>*Lưu ý: tuyệt đối không chọn lại "Xếp lịch tự động" khi hệ thống đã xếp lịch xong, để tránh lỗi database.
+    </p>
     <p>Vui lòng xóa hết lịch hiện tại trước khi chọn "Xếp lịch tự động"</p> --}}
 
     <div class="container">
@@ -15,10 +17,6 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <h4>Lịch thi đấu</h4>
-                    </div>
-                    <div class="col-sm-6">
-                        <a href="#deleteAllMembersModal" class="btn btn-danger btn-delete-members"
-                            data-toggle="modal"><i class="fas fa-minus-circle"></i><span>Xóa tất cả</span></a>
                     </div>
                 </div>
             </div>
@@ -59,141 +57,12 @@
                         <td>{{this.MaSD}}</td>
                         <td>{{this.GioBatDau}}</td>
                         <td>{{this.NgThiDau}}</td>
-                        <td>{{this.TySo}}</td>
+                        <td>{{this.SoBanThangDB1}}-{{this.SoBanThangDB2}}</td>
                         <td>{{this.DoiThang}}</td>
-                        {{!-- <td>
-                            <a href="#editMemberModal" class="edit" data-toggle="modal"><i
-                                    class="fas fa-pencil-alt"></i></a>
-                            <a href="#deleteMemberModal" class="delete" data-toggle="modal"><i
-                                    class="fas fa-trash"></i></a>
-                        </td> --}}
                     </tr>
                     {{/each}}
                 </tbody>
             </table>
-        </div>
-    </div>
-    <!-- Edit Modal HTML -->
-    <div id="addMemberModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form>
-                    <div class="modal-header">
-                        <h4 class="modal-title">Thêm thành viên mới</h5>
-                            <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>Họ và tên</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Số áo</label>
-                            <input type="number" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Ngày sinh</label>
-                            <input type="date" class="form-control" required>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 form-group">
-                                <label>Chiều cao</label>
-                                <input type="number" class="form-control" required>
-                            </div>
-                            <div class="col-6 form-group">
-                                <label>Cân nặng</label>
-                                <input type="number" class="form-control" required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
-                        <input type="submit" class="btn btn-success" value="Thêm">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Edit Modal HTML -->
-    <div id="editMemberModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form>
-                    <div class="modal-header">
-                        <h4 class="modal-title">Chỉnh sửa thông tin</h4>
-                        <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>Họ và tên</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Số áo</label>
-                            <input type="number" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Ngày sinh</label>
-                            <input type="date" class="form-control" required>
-                        </div>
-                        <div class="row">
-                            <div class="col-6 form-group">
-                                <label>Chiều cao</label>
-                                <input type="number" class="form-control" required>
-                            </div>
-                            <div class="col-6 form-group">
-                                <label>Cân nặng</label>
-                                <input type="number" class="form-control" required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
-                        <input type="submit" class="btn btn-success" value="Lưu thay đổi">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Delete Modal HTML -->
-    <div id="deleteMemberModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form>
-                    <div class="modal-header">
-                        <h4 class="modal-title">Xóa thành viên này?</h4>
-                        <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Bạn chắc chắn xóa thành viên này khỏi đội?</p>
-                        <p class="text-warning"><small>Hành động này sẽ không được phục hồi!</small></p>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
-                        <input type="submit" class="btn btn-danger" value="Xóa">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div id="deleteAllMembersModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form>
-                    <div class="modal-header">
-                        <h4 class="modal-title">Xóa tất cả thành viên?</h4>
-                        <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Bạn chắc chắn xóa tất cả thành viên khỏi đội?</p>
-                        <p class="text-warning"><small>Hành động này sẽ không được phục hồi!</small></p>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Hủy">
-                        <input type="submit" class="btn btn-danger" value="Xóa">
-                    </div>
-                </form>
-            </div>
         </div>
     </div>
 
