--- a/views/tournament.hbs
+++ b/views/tournament.hbs
@@ -5,25 +5,11 @@
     <div class="filter-tag d-flex flex-wrap align-items-baseline mb-3">
         <p class="label">Tìm kiếm giải đấu</p>
 
-        <div class="search-bar">
-            <input class="form-control search-box" type="search" placeholder="Tìm kiếm..." aria-label="Search">
+        <form action="" method="POST" class="search-bar">
+            <input class="form-control search-box" type="search" placeholder="Tìm kiếm..." aria-label="Search" name="term">
             <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-        </div>
-        <div class="filter-tag d-flex align-items-baseline">
-            <p>Lọc: </p>
-            <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Vị trí
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">Thủ môn</a></li>
-                    <li><a class="dropdown-item" href="#">Hậu vệ</a></li>
-                    <li><a class="dropdown-item" href="#">Tiền vệ</a></li>
-                    <li><a class="dropdown-item" href="#">Tiền đạo</a></li>
-                </ul>
-            </div>
-        </div>
+        </form>
+        
     </div>
 
     <!-- /Filter bar -->
@@ -95,15 +81,14 @@
             <div class="container-fluid">
                 <div class="row">
                     <p class="label">Giải đấu bậc Đại học</p>
-                    {{#each tournaments}}
+                    {{#each tournamentDetails}}
                     <div class="col-xl-4">
                         <div class="tournament-tag mb-3 d-flex flex-column flex-align-between">
                             <div class="flex-grow-1 tournament-tag__content">
-                                <p class="label tournament-tag__title">Giải đấu {{this.TenGD}}</p>
-                                <p class="title tournament-tag__startdate">Hạn đăng ký: {{this.HanCuoiDangKy}}</p>
-                                <p class="title tournament-tag__startdate" id="date">Ngày hiện tại: 20/05/2021</p>
-                                {{!-- <p class="title tournament-tag__startdate">Ngày kết thúc: 25/05/2021</p> --}}
-                                <p class="title tournament-tag__startdate">Số đội tham gia: {{this.SoDBThamGia}}</p>
+                                <p class="label tournament-tag__title">Giải đấu {{tournament.TenGD}}</p>
+                                <p class="title tournament-tag__duedate">Hạn đăng ký: {{tournament.HanCuoiDangKy}}</p>
+                                <p class="title tournament-tag__startdate">Ngày hiện tại: 20/05/2021</p>
+                                <p class="title tournament-tag__totalteams">Số đội tham gia: {{totalTeams}}</p>
                             </div>
                             <p class="label">Tiến độ giải đấu</p>
                             <div class="progress">
@@ -111,7 +96,7 @@
                                 </div>
                             </div>
                             <div class="tournament-tag__moreinfo d-flex flex-row-reverse">
-                                <a class="mt-3" href="/team">
+                                <a class="mt-3" href="/tournament/{{tournament.MaGD}}">
                                     <p class="text-end">Các đội tham gia</p>
                                 </a>
                                 <a class="mt-3" href="/result">
@@ -124,23 +109,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="col-xl-9">
-                    <div class="col-xl-3">
-                        <div class="tournament-card">
-                            <p class="label">Giải đấu bậc Tiểu học</p>
-                        </div>
-                        <div class="tournament-tag mb-3">
-                            <div class="tournament-tag__content">
-                                <img src="https://www.tienganh123.com/images/tournament/tournament-1.jpg" alt=""
-                                    class="banner-img">
-                                <p class="label tournament-tag__title">Giải đấu bậc Tiểu học</p>
-                                <a href=""></a>
-                            </div>
-                        </div>
-                        
-                    </div>
-                </div> -->
-        <!-- /Tournaments -->
     </div>
 </div>
 <!-- /Tourmanents -->
@@ -150,5 +118,9 @@
     m = n.getMonth() + 1;
     y = n.getFullYear();
 
-    document.getElementById("date").innerHTML = `Ngày hiện tại: ${d}/${m}/${y}`;
+    start_date = document.getElementsByClassName('title tournament-tag__startdate');
+
+    for (let i =0;i<start_date.length;i++){
+        start_date[i].innerHTML = `Ngày hiện tại: ${d}/${m}/${y}`;
+    }
 </script>
